@@ -1,3 +1,13 @@
+2008-02-25  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/playlist-treeview.c:
+	* src/av-cp/renderer-combo.c:
+	* src/av-cp/renderer-controls.c:
+	* src/universal-cp/action-dialog.c:
+
+	No need to pass error argument to gupnp_service_proxy_begin_action*()
+	anymore.
+
 2008-02-23  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-combo.c:
